--- a/home.css
+++ b/home.css
@@ -14,6 +14,21 @@ h1{
     text-align: center;
     font-weight: 900;
 }
+#favourite{
+    width: 10%;
+    margin: auto;
+    text-align: center;
+    color: white;
+    border: #94051a solid 2px;
+    border-radius: 20px;
+   margin-bottom: 30px;
+   padding: 5px;
+}
+
+#favourite:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 1px 1px 1px #94051a;
+}
 
 #search-bar{
     width: 20rem;
@@ -38,17 +53,26 @@ i{
 .search-suggstions{
     width: 60%;
     position: absolute;
-    right: 20%;
+    left:30%;
+}
+
+.item-container{
+    padding: 5px;
+    transition: ease-in .2s;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.item-container:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 2px 2px 2px #94051a;
 }
 
 .item{
-    padding: 5px;
-    transition: ease-in .2s;
-}
-
-.item:hover{
-    transform: scale(1.1);
-    box-shadow: 2px 2px 2px 2px #94051a;
+    width: 70%;
 }
 
 
@@ -90,8 +114,12 @@ li img{
 /* common class */
 
 .beFlex{
-    display: flex;  
+    display: flex; 
+    justify-content: space-between;
+    margin: 10px;;
 }
+
+
 
 .name{
     font-size: 2rem;
