--- a/home.css
+++ b/home.css
@@ -1,10 +1,12 @@
 *{
     background-color: black;
     color:  white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
 h1{
+    margin-top: 5px;
     font-size: 4rem;
     text-transform: uppercase;
     background: url(https://trumpwallpapers.com/wp-content/uploads/Marvel-Wallpaper-03-1920-x-1080.jpg) 0 0 / cover repeat;
@@ -15,14 +17,14 @@ h1{
     font-weight: 900;
 }
 #favourite{
-    width: 10%;
-    margin: auto;
-    text-align: center;
-    color: white;
-    border: #94051a solid 2px;
-    border-radius: 20px;
-   margin-bottom: 30px;
-   padding: 5px;
+        background-color: #94051a;
+        position: absolute;
+        top: 20px;
+        width: 90px;
+        padding: 5px;
+        text-align: center;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
 }
 
 #favourite:hover{
