--- a/superhero.css
+++ b/superhero.css
@@ -1,6 +1,35 @@
 *{
     background-color: black;
     color:  white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#home{
+    background-color: #94051a;
+    width: 50px;
+    position: absolute;
+    top: 20px;
+    padding: 5px;
+    text-align: center;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+#favourite{
+    background-color: #94051a;
+    width: 80px;
+    position: absolute;
+    top: 60px;
+    padding: 5px;
+    text-align: center;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+i{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    color: white;
+    font-size: 3rem;
 }
 
 #Superhero_detail{
