--- a/home.css
+++ b/home.css
@@ -4,7 +4,6 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
 h1{
     margin-top: 5px;
     font-size: 4rem;
@@ -16,6 +15,7 @@ h1{
     text-align: center;
     font-weight: 900;
 }
+
 #favourite{
         background-color: #94051a;
         position: absolute;
@@ -35,7 +35,6 @@ h1{
 #search-bar{
     width: 20rem;
     margin: auto;
-    /* background-color: white; */
 }
 
 input{
@@ -52,7 +51,7 @@ i{
     padding-top: 5px;
 }
 
-.search-suggstions{
+.search-suggestions{
     width: 60%;
     position: absolute;
     left:30%;
@@ -65,8 +64,6 @@ i{
     display: flex;
     justify-content: space-between;
 }
-
-
 
 .item-container:hover{
     transform: scale(1.1);
@@ -81,15 +78,6 @@ i{
 
 
 /* list item features */
-
-/* #super-list-container{
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-} */
-
 li{
     list-style: none;
     border: #94051a solid 2px;
@@ -113,6 +101,8 @@ li img{
     border-radius: 50%;
 }
 
+
+
 /* common class */
 
 .beFlex{
@@ -120,8 +110,6 @@ li img{
     justify-content: space-between;
     margin: 10px;;
 }
-
-
 
 .name{
     font-size: 2rem;
