--- a/superhero.css
+++ b/superhero.css
@@ -13,6 +13,7 @@
     text-align: center;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    cursor: pointer;
 }
 
 #favourite{
@@ -24,6 +25,7 @@
     text-align: center;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    cursor: pointer;
 }
 
 i{
@@ -32,6 +34,7 @@ i{
     top: 30px;
     color: white;
     font-size: 3rem;
+    cursor: pointer;
 }
 
 #Superhero_detail{
